[tool.poetry]
name = "hyper-experiment"
version = "0.1.0"
description = ""
authors = ["Junaid Rahim <junaidrahim8d@gmail.com>"]
readme = "README.md"
packages = [{include = "hyper_experiment"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
